poc/tests/errors/test_FplVariableAlreadyDeclared_proposition_01.fpl
Test.Namespace
{
    theory
    {
        proposition Test(x: Nat)
        {
            x: Nat
            pre: True
            con: True
        }
    }
}

##############################

FplVariableAlreadyDeclared:7:13: The name 'x' was already declared in the current context at (5,26)